fix login form alignment

--- a/html_05/css/style.css
+++ b/html_05/css/style.css
@@ -13,7 +13,6 @@
 /* GENERAL SECTION. Set up background, font, clearfix. */
 .login-page-bg {
     background: url('../img/bg.jpg') no-repeat;
-    /* background-size: cover; */
     background-position: top;
 
     font-family: 'PT Root Light', Tahoma, sans-serif;
@@ -25,14 +24,19 @@
     display: block;
 }
 
+html, body, .content-wrapper {
+    height: 100%;
+    min-width: 900px;
+}
+
 /* MENU */
+.header {
+    height: 36px;
+}
+
 .top-menu {
     height: 36px;
     width: 100%;
-    min-width: 800px;
-    
-    position: absolute;
-    z-index: 100;
 
     background-color: #085595;
 }
@@ -104,6 +108,18 @@ img.flag-image {
     transform: translateY(30%);
 }
 
+.content-wrapper {
+    text-align: center;
+    display: block;
+}
+
+.content-wrapper:before {
+    content: "";
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+}
+
 /* LOGIN FORM */
 .fb-button {
     width: 276px;
@@ -133,14 +149,9 @@ img.flag-image {
 }
 
 .login-form-wrapper {
+    display: inline-block;
+    vertical-align: middle;
     width: 560px;
-    height: 613px;
-
-    position: absolute;
-    top: 50%;
-    left: 50%;
-
-    transform: translate(-50%, -50%);
 }
 
 .login-form-header {
@@ -226,7 +237,7 @@ input[type="password"]:focus {
 
 button[type="submit"] {
     height: 34px;
-    margin-top: 10px;
+    margin: 10px;
     padding: 10px;
     border: 0;
     border-radius: 5px;
